# SWENG861_Spotify_API

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  spotify.rs
web/: index.html  index.js  style.css
