[package]
name = "sweng861_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
serde = { version = "1.0.163", features = ["derive"] }
serde_urlencoded = "0.7.1"
serde_json = "1.0.96"
dotenv = "0.15.0"
#Web Specific
actix-web = "4"
actix-files = "0.6.2"
env_logger = "0.10.0"
log = "0.4.17"